syntax = "proto3";
package data;
option go_package = "github.com/benka-me/redis-pb-vs-json/src/pb";

message Message {
  string String = 1;
  string StringString2 = 2;
  string StringStringString3 = 3;
  string String4String4String4 = 4;
  int32 Int = 5;
}

message DataSet {
  message Status {
    bool status = 1;
    string errorMessage = 2;
  }
  Followers followers = 3;
  bool isLike = 4;
  message Entries {
    string validated = 5;
    int32 len = 6;
    int64 statusId = 7;
    bool isSome = 8;
  }
  uint64 capacity = 9;
  uint32 relatedObject = 10;
  message Children {
    uint64 id1 = 11;
    uint64 id2 = 12;
    uint64 id3 = 13;
    uint64 id4 = 14;
    message Embedded {
      sfixed32 ref = 15;
      bytes content = 16;
      enum Enum {
        TODO = 0;
        DONE = 1;
        reserved 2 to 399;
        ERROR = 400;
      }
      string comment = 17;
    }
  }
  reserved 20 to 50;
  sint32 ok = 51;
}


message Follower {
  int32 id = 1;
  string name = 2;
}

message Followers {
  bool status = 1;
  repeated Follower followers = 2;
}
